Fix star whitespace, show the correct activity in past reports

--- a/static/css/view-project/src/main.scss
+++ b/static/css/view-project/src/main.scss
@@ -141,6 +141,7 @@ h2.padded {
     flex-direction: column-reverse;
     justify-content: space-between;
     margin-top: 1em;
+    white-space: pre-line;
 
     .stars {
       margin-bottom: .5em;
@@ -209,12 +210,13 @@ h2.padded {
 
     .info {
       width: 60%;
-      background: linear-gradient(
-        to left,
-        #fff 0%,
-        rgba(255, 255, 255, 1) 90%,
-        rgba(255, 255, 255, 0) 100%
-      );
+      background:
+        linear-gradient(
+          to left,
+          #fff 0%,
+          rgba(255, 255, 255, 1) 90%,
+          rgba(255, 255, 255, 0) 100%
+        );
       margin: 0;
       padding-left: 4em;
       padding-right: 1em;
@@ -250,12 +252,18 @@ h2.padded {
 
 @media only screen and (min-width: 1024px) {
   .reports {
+    min-width: 25em;
+
     .data-points, .feedback {
       flex-direction: row;
     }
 
     .data-points .labeled:first-child {
       margin-right: 10%;
+    }
+
+    .label {
+      white-space: nowrap;
     }
 
     .feedback .stars {
